--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
    body{
-background-image: url(unnamed.jpg);
+background-image: url(ertugrul-gazi-wallpaper-hd.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 height: 600px;
