--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ color: cyan
 text-align: center;
 border-left: 7px solid;
 border-right: 7px solid;
-border-image: linear-gradient(gray, black);
+border-image: linear-gradient(rgba(17, 193, 224, 0.973), rgb(9, 12, 34));
 border-image-slice: 1;
 }
 .out{
@@ -23,7 +23,7 @@ background-color: black;
 }
 .link-button{
 text-decoration: none;
-background-image: linear-gradient(45deg, black, gray);
+background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.521), rgba(128, 128, 128, 0.507));
 padding: 20px 30px;
 border-radius: 5px;
 color: white;
@@ -34,7 +34,7 @@ margin-top: 20px;
 }
 .rs{
 text-align: center;
-color: gray;
+color: rgb(1, 1, 34);
 }
 .link-button:hover{
 color:rgb(0, 0, 0);
